--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@emotion/styled": "^11.10.4",
     "@faker-js/faker": "^7.6.0",
     "@iconify/react": "^4.0.0",
+    "@mui/icons-material": "^5.10.9",
     "@mui/lab": "^5.0.0-alpha.103",
     "@mui/material": "^5.10.9",
     "apexcharts": "^3.36.0",
@@ -54,6 +55,7 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-final-form": "^6.5.9",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.37.0",
     "react-router-dom": "^6.4.2",
