--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     ]
   },
   "dependencies": {
+    "@auth0/auth0-react": "^1.12.0",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@faker-js/faker": "^7.6.0",
@@ -58,6 +59,7 @@
     "react-final-form": "^6.5.9",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.37.0",
+    "react-json-pretty": "^2.2.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
     "simplebar-react": "^2.4.3",
