--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "axios": "^1.1.3",
     "change-case": "^4.1.2",
     "date-fns": "^2.29.3",
+    "draft-js": "^0.11.7",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
@@ -57,6 +58,7 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-final-form": "^6.5.9",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.37.0",
