--- a/package.json
+++ b/package.json
@@ -46,12 +46,14 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/lab": "^5.0.0-alpha.103",
     "@mui/material": "^5.10.9",
+    "@mui/styles": "^5.10.16",
     "apexcharts": "^3.36.0",
     "axios": "^1.1.3",
     "change-case": "^4.1.2",
     "date-fns": "^2.29.3",
     "draft-js": "^0.11.7",
     "history": "^5.3.0",
+    "immutable": "^4.1.0",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
     "prop-types": "^15.8.1",
@@ -63,8 +65,10 @@
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.37.0",
     "react-json-pretty": "^2.2.0",
+    "react-native-svg": "^13.6.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
+    "react-wavify": "^1.6.3",
     "simplebar-react": "^2.4.3",
     "web-vitals": "^3.0.3"
   },
