--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "change-case": "^4.1.2",
     "date-fns": "^2.29.3",
     "draft-js": "^0.11.7",
+    "draft-js-export-html": "^1.4.1",
+    "draftjs-to-html": "^0.9.1",
     "history": "^5.3.0",
     "immutable": "^4.1.0",
     "lodash": "^4.17.21",
