--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-native-svg": "^13.6.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
+    "react-svg": "^15.1.17",
     "react-wavify": "^1.6.3",
     "simplebar-react": "^2.4.3",
     "web-vitals": "^3.0.3"
