--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-hook-form": "^7.37.0",
     "react-json-pretty": "^2.2.0",
     "react-native-svg": "^13.6.0",
+    "react-paginate": "^8.1.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
     "react-svg": "^15.1.17",
