Se capturan los datos de los combobox y se trae la lista de objetos, queda pendiente mostrarlos en tabla

--- a/.eslintrc
+++ b/.eslintrc
@@ -80,7 +80,7 @@
   "settings": {
     "import/resolver": {
       "node": {
-        "extensions": [".native.js"]
+        "extensions": [".native.js", ".js"]
       }
     }
   }
