--- a/package.json
+++ b/package.json
@@ -39,17 +39,18 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^1.12.0",
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@faker-js/faker": "^7.6.0",
     "@iconify/react": "^4.0.0",
     "@mui/icons-material": "^5.10.9",
     "@mui/lab": "^5.0.0-alpha.103",
-    "@mui/material": "^5.10.9",
+    "@mui/material": "^5.11.3",
     "@mui/styles": "^5.10.16",
     "apexcharts": "^3.36.0",
     "axios": "^1.1.3",
     "change-case": "^4.1.2",
+    "chart.js": "^3.9.1",
     "date-fns": "^2.29.3",
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
@@ -61,6 +62,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-final-form": "^6.5.9",
