--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
+    "react-fast-marquee": "^1.3.5",
     "react-final-form": "^6.5.9",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.37.0",
