--- a/package.json
+++ b/package.json
@@ -14,18 +14,18 @@
         "clear-all": "rm -rf build node_modules",
         "re-start": "rm -rf build node_modules && yarn install && yarn start",
         "re-build": "rm -rf build node_modules && yarn install && yarn build"
-        },
-        "eslintConfig": {
+    },
+    "eslintConfig": {
         "extends": [
             "react-app"
         ]
-        },
-        "babel": {
+    },
+    "babel": {
         "presets": [
             "@babel/preset-react"
         ]
-        },
-        "browserslist": {
+    },
+    "browserslist": {
         "production": [
             ">0.2%",
             "not dead",
@@ -36,8 +36,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
-        },
-        "dependencies": {
+    },
+    "dependencies": {
         "@auth0/auth0-react": "^1.12.0",
         "@emotion/react": "^11.10.4",
         "@emotion/styled": "^11.10.4",
@@ -49,9 +49,8 @@
         "@mui/styles": "^5.10.16",
         "apexcharts": "^3.36.0",
         "axios": "^1.1.3",
-        "chart.js": "^3.8.0",
-        "react-chartjs-2": "^4.3.1",
         "change-case": "^4.1.2",
+        "chart.js": "^3.8.0",
         "date-fns": "^2.29.3",
         "draft-js": "^0.11.7",
         "draft-js-export-html": "^1.4.1",
@@ -63,6 +62,7 @@
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-apexcharts": "^1.4.0",
+        "react-chartjs-2": "^4.3.1",
         "react-dom": "^18.2.0",
         "react-draft-wysiwyg": "^1.15.0",
         "react-final-form": "^6.5.9",
@@ -70,14 +70,15 @@
         "react-hook-form": "^7.37.0",
         "react-json-pretty": "^2.2.0",
         "react-native-svg": "^13.6.0",
+        "react-paginate": "^8.1.4",
         "react-router-dom": "^6.4.2",
         "react-scripts": "^5.0.1",
         "react-svg": "^15.1.17",
         "react-wavify": "^1.6.3",
         "simplebar-react": "^2.4.3",
         "web-vitals": "^3.0.3"
-        },
-        "devDependencies": {
+    },
+    "devDependencies": {
         "@babel/core": "^7.19.3",
         "@babel/eslint-parser": "^7.19.1",
         "@svgr/webpack": "^6.5.0",
@@ -92,8 +93,8 @@
         "eslint-plugin-react": "^7.31.10",
         "eslint-plugin-react-hooks": "^4.6.0",
         "prettier": "^2.7.1"
-        },
-        "overrides": {
+    },
+    "overrides": {
         "@svgr/webpack": "^6.5.0"
-        }
+    }
 }
